--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,13 @@
-/node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Dependency directories
+/node_modules/
+/.pnp
+.pnp.js
+
+# dotenv environment variable files
 .env
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
