--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Basic template you can use in your Node Backends for JWT authentication - TypeScript edition.",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "tsc && node dist/index.js",
     "dev": "nodemon dist/index.js",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,11 +22,13 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.3",
+    "multer": "^1.4.5-lts.1",
     "typescript": "^4.9.4",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.11",
     "nodemon": "^3.1.0"
   }
 }
