--- a/backend/package.json
+++ b/backend/package.json
@@ -23,12 +23,14 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "typescript": "^4.9.4",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.1.0"
   }
 }
