Update microservice readme .env.example

--- a/microservices/.env.example
+++ b/microservices/.env.example
@@ -1,3 +1,12 @@
-API_KEY=api-key
+API_KEY="[
+api-key
+]"
 DEV_MODE=False
-ALLOWED_ORIGINS=http://localhost,https://example.com
+ALLOWED_ORIGINS="[
+http://localhost,
+https://example.com
+]"
+MODELS_PATH="./path"
+MAX_CONTENT_LENGTH=2097152 # in bytes
+MAX_PENDING_REQUESTS=10
+MAX_CONCURRENT_REQUESTS=2
